Tests not working

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -10,15 +10,15 @@ add_executable(
         ../model/array/Sequence.h
         ../model/tests/Tests.cpp
         ../model/tests/Tests.h
-        ../presenter/Presenter.cpp
-        ../presenter/Presenter.h
-        ../view/chart/Chartcontrol.cpp
-        ../view/chart/Chartcontrol.h
-        ../view/App.cpp
-        ../view/App.h
-        ../view/MainFrame.cpp
-        ../view/MainFrame.h
-        #main.cpp
+        #../presenter/Presenter.cpp
+        #../presenter/Presenter.h
+        #../view/chart/Chartcontrol.cpp
+        #../view/chart/Chartcontrol.h
+        #../view/App.cpp
+        #../view/App.h
+        #../view/MainFrame.cpp
+        #../view/MainFrame.h
+        main.cpp
         #model/HashTable.h
         model/IMap.h
         #model/HashTable1.h
